# sdg-invoervoorziening

./: .babelrc  .bumpversion.cfg  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  Dockerfile  INSTALL.rst  Jenkinsfile  LICENSE.md  Makefile  README.rst  bootstrap.py  default.conf  docker-compose.yml  docker-init-db.sql  dotenv.example  karma.conf.js  package-lock.json  package.json  pyproject.toml  setup.cfg  webpack.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
.github/workflows/: ci.yml  code-quality.yml  codeql-analysis.yml
data/: .~lock.UPL-actueel.csv#  Gemeente.xml  SDG-Informatiegebieden.csv  UPL-SDG-Informatiegebied.csv  UPL-actueel.csv
deployment/: app.yml  hosts.example
docs/: definities.md  functioneel_beheer.md  index.md  introductie.md  server.md  testing.rst  testplan.md
docs/coding_style/: backend.rst  frontend.rst  index.rst
docs/deployment/: VHOSTS.rst
docs/general/: index.rst
docs/install/: dev.rst
requirements/: base.in  base.txt  ci.txt  dev.in  dev.txt  test-tools.in
src/: manage.py  openapi.yaml
src/sdg/: __init__.py  celery.py  cms_disabled_urls.py  decorators.py  miscellaneous_urls.py  setup.py  urls.py  wsgi.py
src/sdg/accounts/: __init__.py  adapters.py  admin.py  apps.py  forms.py  managers.py  mixins.py  models.py  tf_urls.py  urls.py  utils.py
src/sdg/admin/: urls.py
src/sdg/api/: admin.py  apps.py  authentication.py  exception_handling.py  filters.py  mixins.py  models.py  permissions.py  (+2 more)
testscripts/: postman.json
(+861 files in other folders)
